@@ -6,6 +6,7 @@ General Changes:
 ****************
 
 Heavy use of typing so this make impossible to use BasicTools on python prior version 3.7
+Add nTags for the ElementFilter: The user can select element using nodal tags. Two options "allnodes" or "leastonenode"
 
 API Changes:
 ************
